# xml-parser

./: CMakeLists.txt  README.md
include/: XmlParser.h
src/: XmlParser.cpp
tests/: ParserTest.cpp
xml_files/: config.xml  config.xsd
